Extended Jinja examples in index.html

--- a/template/index.html
+++ b/template/index.html
@@ -17,7 +17,7 @@
 
         <hr>
 
-        <div id="json rows">
+        <div id="json-rows">
             {% for job in responseJSON %}
             <div>{{ job[0] }}</div>
             <div>{{ job[1] }}</div>
